# Media_Naming

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.workspace.yml  docker-compose.yml
docs/: _coverpage.md  _sidebar.md  account.md  book.md  cli.md  document.md  ebook.md  game.md  ideas.md  image.md  music.md  system.md  tools.md  video.md  workspace.md
docsify/: docker-compose.dev.yml  docker-compose.yml
src/: __main__.py  media.py  models.py  naming.py  utils.py
src/naming/: __main__.py  main.py
src/naming/cli/: main.py  media.py
src/naming/commands/: media.py
src/naming/constants/: media.py  os.py
src/naming/models/: db.py  extractor.py  media.py
src/naming/services/: extractor.py  io.py  media.py  os.py  utils.py
src/naming/utils/: wrapper.py
tools/: git.sh
