[project]
name = "naming"
version = "1.0.0"
description = "Create folders for many type of media."
authors = [
    {name = "ProgOwer", email = "progower0770@gmail.com"},
]
dependencies = [
    "typer[all]>=0.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.scripts]
naming = { call = "src.naming.main:app" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
